bug #124: bitcoin address not completely visible

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -806,16 +806,23 @@
   padding-left: 5px;
 }
 /* line 20, ../sass/_me.scss */
+.meContainer .section .displayField .addressLabel {
+  width: 50px;
+  line-height: 15px;
+  margin-left: 5px;
+  float: left;
+}
+/* line 26, ../sass/_me.scss */
 .meContainer .section .displayField.odd {
   background-color: #00ace2;
 }
-/* line 29, ../sass/_me.scss */
+/* line 35, ../sass/_me.scss */
 .meContainer .section .displayField input[type=number]::-webkit-inner-spin-button,
 .meContainer .section .displayField input[type=number]::-webkit-outer-spin-button {
   -webkit-appearance: none;
   margin: 0;
 }
-/* line 33, ../sass/_me.scss */
+/* line 39, ../sass/_me.scss */
 .meContainer .section .displayField div, .meContainer .section .displayField input {
   border: 0;
   height: 100%;
@@ -829,12 +836,12 @@
   color: #047bb2;
   background-color: #f2fbff;
 }
-/* line 45, ../sass/_me.scss */
+/* line 51, ../sass/_me.scss */
 .meContainer .section .displayField div.readOnly, .meContainer .section .displayField input.readOnly {
   color: #f2fbff;
   background-color: #073651;
 }
-/* line 50, ../sass/_me.scss */
+/* line 56, ../sass/_me.scss */
 .meContainer .section .displayField .rightButton {
   position: absolute;
   right: 0;
@@ -843,7 +850,7 @@
   line-height: 25px;
   border-radius: 30px;
 }
-/* line 58, ../sass/_me.scss */
+/* line 64, ../sass/_me.scss */
 .meContainer .section .displayField input:focus {
   outline: 0;
 }
